2007-03-08  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* doc/*.1: Initial cleanups of man pages, including new pages for
	obenergy, obminimize, and obrotamer.

	* Doxyfile-man: Update to point to new babel location.

	* src/chains.cpp: Fixing bug with chain perception related to
	PR#1626789, and 1577248. Setting visit flags skipped
	marking some atoms as members of residues.

	* test/residue.cpp: Add new tests for PR#1577248.

	* data/types.txt, data/types.h: Add Lp atom type for Sybyl based
	on PR#1672575.
	
2007-03-08  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/obutil.cpp: moved IsNan() to here. Hopefully this will eliminate
	the problem with non C99 compatible compilers.

	* src/forcefield.cpp: update documentation + small optimization
	changes.

	* include/openbabel/forcefield.h: update documentation (in progress).

	* tools/obenergy.cpp: Added man page.
	
	* tools/obminimize.cpp: Added man page.

2007-03-07 Chris Morley

	* src/for,ats/smilesformat.cpp(FixCisTransBonds): replace
	bitwise | by logical ||. 
	I guess if (v1 < 2 || v1 > 3 || v2 < 2 || v2 > 3) was meant.
	
	* include/openbabel/base.h(GetData(DataOrigin), base.cpp: 
	This was returning a reference to a local object. 
	Return a copy of it instead.
	
	* src/formats/inchiformat.cpp: Reformat Description().
	In WriteMolecule, modify bond stereo to work with new Up/Down
	usage.
	
	* src/formats/xml/cmlformat.cpp: For reading and writing,
	modify bond stereo to work with new Up/Down usage.
	Now writes bondStereo elements in array form.
	
2007-03-06  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* tools/obdoc.cpp: Update for wiki format to facilitate updates
	after 2.1 release. 

	* src/formats/pdbformat.cpp: Mark that chain/residue
	perception is not needed. Make sure that code anticipates atoms
	with no residue.

	* src/data.cpp (OBResidueData): Anticipate that some atoms will
	have no residue.

	* src/formats/mopacformat.cpp: Add keyword support, fix problem